# lightcurve-fitting

./: .gitignore  Cargo.toml  README.md  build.rs  mkdocs.yml
.github/workflows/: docs.yml  test.yml  throughput.yml
benchmarks/: nonparametric_points.csv  nonparametric_sources.csv  parametric_points.csv  parametric_sources.csv  plot_throughput.py  run_bench.sh  throughput_results.csv
cuda/: gp.cu  models.cu
docs/: api.md  benchmarks.md  generate_examples.py  generate_plots.py  index.md
docs/examples/: agn.md  sn_ia.md  tde.md
docs/getting-started/: installation.md  quickstart.md
docs/models/: nonparametric.md  parametric.md  thermal.md
python/: Cargo.toml
python/src/: lib.rs
python/tests/: test_bindings.py
scripts/: eval_horizon.py  eval_horizon_parametric.py  plot_decay_metrics.py  profile_parametric.py
src/: common.rs  gp.rs  gpu.rs  lib.rs  nonparametric.rs  parametric.rs  sparse_gp.rs  thermal.rs
tests/: bench_gpu.rs  bench_t0_grid.rs  bench_throughput.rs  gen_test_fixtures.py  test_custom_gp.rs  test_gp.rs  test_gpu.rs  test_real_data.rs
tests/fixtures/: real_sources.json
