[workspace]
members = ["python"]

[package]
name = "lightcurve-fitting"
version = "0.1.0"
edition = "2021"
description = "Lightcurve fitting for astronomical transients"
license = "GPL-3.0"
repository = "https://github.com/boom-astro/lightcurve-fitting"
homepage = "https://github.com/boom-astro/lightcurve-fitting"

[features]
default = []
cuda = ["cc"]

[build-dependencies]
cc = { version = "1", features = ["parallel"], optional = true }

[dependencies]
argmin = "0.11.0"
argmin-math = { version = "0.5", features = ["vec"] }
rand = "0.9.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
itertools = "0.14.0"
rayon = "1.10"
